[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/PTSerif-Italic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scene/Opzioni/ModificaComandi.gd" type="Script" id=2]
[ext_resource path="res://Scene/Opzioni/BottoneInput.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Opzioni/PanelOpzioni.gd" type="Script" id=4]
[ext_resource path="res://Scene/Opzioni/Opzioni.gd" type="Script" id=5]
[ext_resource path="res://Scene/Opzioni/Difficolta.gd" type="Script" id=6]
[ext_resource path="res://Scene/Opzioni/BottoneDifficolt√†.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="Opzioni" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -109.0
margin_right = 180.0
margin_bottom = 148.0
script = ExtResource( 5 )

[node name="Difficulty" parent="." instance=ExtResource( 7 )]

[node name="Volume" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 88.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="Volume"]
margin_top = 2.0
margin_right = 71.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Volume:"

[node name="HSlider" type="HSlider" parent="Volume"]
margin_left = 75.0
margin_right = 152.0
margin_bottom = 32.0
focus_next = NodePath("../../Fullscreen/CheckBox")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0

[node name="Fullscreen" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 39.0
margin_right = 58.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="Fullscreen"]
margin_right = 94.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "Fullscreen:"

[node name="CheckBox" type="CheckBox" parent="Fullscreen"]
margin_left = 98.0
margin_right = 122.0
margin_bottom = 27.0
focus_next = NodePath("../../ModificaComandi/BottoneInput")
focus_previous = NodePath(".")

[node name="Label8" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 80.0
margin_right = 73.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 2 )
text = "Bind commands"

[node name="ModificaComandi" type="Control" parent="."]
margin_top = 86.0
margin_right = 306.0
margin_bottom = 193.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="ModificaComandi"]
margin_top = 33.0
margin_right = 71.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 5 )
text = "Move Left:"

[node name="Label2" type="Label" parent="ModificaComandi"]
margin_top = 65.0
margin_right = 81.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 5 )
text = "Move Right:"

[node name="Label3" type="Label" parent="ModificaComandi"]
margin_top = 96.0
margin_right = 41.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 5 )
text = "Jump:"

[node name="BottoneInput" parent="ModificaComandi" instance=ExtResource( 3 )]
margin_left = 95.0
margin_top = 32.0
margin_right = 179.0
margin_bottom = 60.0
focus_neighbour_right = NodePath("../BottoneInput4")
focus_next = NodePath("../BottoneInput2")
focus_previous = NodePath("../../Fullscreen/CheckBox")
text = "Move left"
action = "move_left"

[node name="BottoneInput2" parent="ModificaComandi" instance=ExtResource( 3 )]
margin_left = 95.0
margin_top = 64.0
margin_right = 179.0
margin_bottom = 92.0
focus_neighbour_right = NodePath("../BottoneInput5")
focus_next = NodePath("../BottoneInput3")
focus_previous = NodePath("../BottoneInput")
text = "Move right"
action = "move_right"

[node name="BottoneInput3" parent="ModificaComandi" instance=ExtResource( 3 )]
margin_left = 95.0
margin_top = 96.0
margin_right = 179.0
margin_bottom = 124.0
focus_next = NodePath("../BottoneInput4")
focus_previous = NodePath("../BottoneInput2")
text = "Jump"
action = "jump"

[node name="Label4" type="Label" parent="ModificaComandi"]
margin_left = 215.0
margin_top = 33.0
margin_right = 263.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 5 )
text = "Lance:"

[node name="Label5" type="Label" parent="ModificaComandi"]
margin_left = 215.0
margin_top = 65.0
margin_right = 263.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 5 )
text = "Shoot:"

[node name="Label6" type="Label" parent="ModificaComandi"]
margin_left = 215.0
margin_top = 96.0
margin_right = 263.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 5 )
text = "Drop:"

[node name="BottoneInput4" parent="ModificaComandi" instance=ExtResource( 3 )]
margin_left = 279.0
margin_top = 32.0
margin_right = 359.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../BottoneInput")
focus_next = NodePath("../BottoneInput5")
focus_previous = NodePath("../BottoneInput3")
text = "Lance"
action = "lance"

[node name="BottoneInput5" parent="ModificaComandi" instance=ExtResource( 3 )]
margin_left = 279.0
margin_top = 64.0
margin_right = 359.0
margin_bottom = 92.0
focus_neighbour_left = NodePath("../BottoneInput2")
focus_next = NodePath("../BottoneInput6")
focus_previous = NodePath("../BottoneInput4")
text = "Shoot"
action = "shoot"

[node name="BottoneInput6" parent="ModificaComandi" instance=ExtResource( 3 )]
margin_left = 279.0
margin_top = 96.0
margin_right = 359.0
margin_bottom = 124.0
focus_next = NodePath("../BottoneInput7")
focus_previous = NodePath("../BottoneInput5")
text = "Stomp"
action = "stomp"

[node name="BottoneInput7" parent="ModificaComandi" instance=ExtResource( 3 )]
margin_left = 95.0
margin_top = 128.0
margin_right = 179.0
margin_bottom = 156.0
focus_next = NodePath("../../Reset")
focus_previous = NodePath("../BottoneInput6")
action = "interact"

[node name="PopupPanel" type="PopupPanel" parent="ModificaComandi"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -21.0
margin_right = 65.5
margin_bottom = 15.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="ModificaComandi/PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -14.0
margin_right = 55.5
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Press any key..."
align = 1
valign = 1

[node name="Label7" type="Label" parent="ModificaComandi"]
margin_top = 128.0
margin_right = 58.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 6 )
text = "Interact:"

[node name="Reset" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 130.0
margin_top = -28.0
margin_right = 178.0
focus_previous = NodePath("../ModificaComandi/BottoneInput7")
custom_fonts/font = SubResource( 7 )
text = "Reset"

[node name="Difficult" type="Control" parent="."]
margin_left = 239.0
margin_top = -40.0
margin_right = 239.0
script = ExtResource( 6 )

[connection signal="item_selected" from="Difficulty/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Volume/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="Fullscreen/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Reset" to="ModificaComandi" method="_on_Reset_pressed"]

[editable path="Difficulty"]
